fix left-align for table headers

--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -103,7 +103,7 @@ table {
 
 th {
     text-align: left;
-    padding-left: 5px;
+    padding-left: 0;
 }
 
 #form-box {
